--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -3,7 +3,7 @@
     
     <!--username-->
     <label for="inputUserName" class="sr-only">User Name</label>
-   	<input type="text" name="model" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
+   	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
     <br/>
     
     <!--make-->
