--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -1,6 +1,6 @@
-<form class="form-signin" style="max-width: 350px; padding: 15px; margin: 0 auto;" action="/subscribe" method="POST">
-	<h1 class="form-signin-heading">Subscribe Now</h1>
-    
+<form class="form-signin" style="max-width: 520px; padding: 15px; margin: 0 auto;" action="/subscribe" method="POST">
+	<h1 class="form-signin-heading"><big><b>Subscribe Now</b></big></h1>
+    <br/>
     <!--username-->
     <label for="inputUserName" class="sr-only">User Name</label>
    	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
@@ -24,6 +24,6 @@
     <!--email-->
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-    <br/>
+    <br/><br/>
     <input type="submit" class="btn btn-lg btn-primary btn-block">
 </form>
