--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,8 @@ $def with (content)
     <![endif]-->
   <style type="text/css"></style></head>
 
-  <!--<body style="background-color: #FFFFFF; overflow:hidden">-->
-<body style="overflow:hidden">
+  <!--<body style="background-color: #FFFFFF">-->
+<body>
 	<div class="container-fluid" style="padding-bottom: 8%"></div>
     <div class="row">
         <div class="col-md-6">
