--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,12 +27,14 @@ $def with (content)
 <body>
 	<div class="container-fluid" style="padding-bottom: 8%"></div>
     <div class="row">
-        <div class="col-md-6">
-		    123
-		</div>
+      <div class="col-md-6">
+        <div class="verticalLine">
+		      <big><big>Based</big></big> on a customer’s needs(car model, year of make, mileage,etc) we find the posts on craiglist, which agree with the customer’s needs and look up the price for the car on sale on the post from Kbb. Then our website will show the customer the posts(link to the original posts on craiglist) with cars he is interested in on sale and the price from Kbb.
+        </div>
+		  </div>
 		
-        <div class="col-md-6">      
-		$:content
-		</div>
-      </div>
+      <div class="col-md-6">      
+		    $:content
+		  </div>
+    </div>
 </body></html>
