--- a/static/cover.css
+++ b/static/cover.css
@@ -9,6 +9,14 @@ a:hover {
   color: #fff;
 }
 
+/* vertical line */
+.verticalLine {
+    border-right: thin solid #ffffff;
+    font-size: 2.25em;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
