--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@ $def with (content)
     </div>
   <div class="mastfoot">
             <div class="inner">
-              <p>All rigts reserved <a href="https://github.com/SuperCh-SE-NCSU/ProjectScraping">© SuperCh-SE-NCSU</a>, by <a href="https://github.com/Winbobob">@winbobob</a>.</p>
+              <p>All rights reserved <a href="https://github.com/SuperCh-SE-NCSU/ProjectScraping">© SuperCh-SE-NCSU</a>, by <a href="https://github.com/Winbobob">@winbobob</a>.</p>
             </div>
           </div>
 </body></html>
