--- a/static/cover.css
+++ b/static/cover.css
@@ -39,8 +39,8 @@ body {
 }
 body {
   color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  text-align: left;
+  text-shadow: 0 1px 3px rgba(0,0,0,0);
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
