--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,12 @@
 $def with (content)
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
     <title>Subscribe Now</title>
 
@@ -16,12 +16,23 @@ $def with (content)
     <!-- Custom styles for this template -->
     <link href="static/cover.css" rel="stylesheet">
 
+    <!--Jquery autocomplete-->
+    <link href="static/jquery-ui.css" rel="stylesheet">
+    <script src="static/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="static/jquery-ui.js" type="text/javascript"></script>
+
+    <!--import csv file-->
+    <script src="jquery-csv.js"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <style type="text/css"></style></head>
+  <style type="text/css"></style>
+
+
+</head>
 
   <!--<body style="background-color: #FFFFFF">-->
 <body style="overflow:hidden">
@@ -37,9 +48,11 @@ $def with (content)
 		    $:content
 		  </div>
     </div>
-  <div class="mastfoot">
+    <center>
+       <div class="mastfoot">
             <div class="inner">
               <p>All rights reserved <a href="https://github.com/SuperCh-SE-NCSU/ProjectScraping">© SuperCh-SE-NCSU</a>, by <a href="https://github.com/Winbobob">@winbobob</a>.</p>
             </div>
           </div>
+    </center>
 </body></html>
