--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -5,17 +5,30 @@
     <label for="inputUserName" class="sr-only">User Name</label>
    	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
     <br/>
-    
+
     <!--make-->
     <label for="inputMake" class="sr-only">Car Make</label>
 	<input type="text" name="make" id="inputMake" class="form-control" placeholder="Car Make" required="" autofocus="">    
     <br/>
     
+    <!--javascript should put after the label and input-->
+    <script>
+        jQuery('#inputMake').autocomplete({
+          source: [ "c++", "java", "php", "coldfusion", "javascript", "asp", "ruby" ]
+        });
+    </script>
+
     <!--model-->
     <label for="inputModel" class="sr-only">Car Model</label>   
     <input type="text" name="model" id="inputModel" class="form-control" placeholder="Car Model" required="" autofocus="">
     <br/>
-     
+    
+    <script>
+        jQuery('#inputModel').autocomplete({
+          source: [ "c++", "java", "php", "coldfusion", "javascript", "asp", "ruby" ]
+        });
+    </script>
+
     <!--year-->
     <label for="inputEmail" class="sr-only">Car Year</label>
 	<input type="number" name="year" id="inputYear" class="form-control" placeholder="Car Year (1909~2015)" min="1909" max="2015" required="" autofocus="">    
