--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -1,4 +1,4 @@
-<form class="form-signin" style="max-width: 350px; padding: 15px; margin: 0 auto;" action="/subscribe" method="POST">
+<form class="form-signin" style="max-width: 350px; padding: 15px; margin: 0 auto;" action="/" method="POST">
 	<h1 class="form-signin-heading">Subscribe Now</h1>
     <br/>
     <!--username-->
