--- a/templates/carInformation.html
+++ b/templates/carInformation.html
@@ -1,3 +1,5 @@
+<html>
+<body>
 <form class="form-signin" style="max-width: 350px; padding: 15px; margin: 0 auto;" action="/" method="POST">
 	<h1 class="form-signin-heading">Subscribe Now</h1>
     <br/>
@@ -69,3 +71,5 @@
     <br/>
     <input type="submit" class="btn btn-lg btn-primary btn-block">
 </form>
+</body>
+</html>
