--- a/templates/carInformation.html
+++ b/templates/carInformation.html
@@ -1,75 +1,5 @@
 <html>
 <body>
-<form class="form-signin" style="max-width: 350px; padding: 15px; margin: 0 auto;" action="/" method="POST">
-	<h1 class="form-signin-heading">Subscribe Now</h1>
-    <br/>
-    <!--username-->
-    <label for="inputUserName" class="sr-only">User Name</label>
-   	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
-    <br/>
-
-    <!--make-->
-    <label for="inputMake" class="sr-only">Car Make</label>
-	<input type="text" name="make" id="inputMake" class="form-control" placeholder="Car Make" required="" autofocus="">    
-    <br/>
-    
-    <!--model-->
-    <label for="inputModel" class="sr-only">Car Model</label>   
-    <input type="text" name="model" id="inputModel" class="form-control" placeholder="Car Model" required="" autofocus="">
-    <br/>
-
-    <!--javascript should put after the label and input-->
-    <script>
-    jQuery(document).ready(function() {
-        jQuery('#inputMake').autocomplete({
-          source:  function(request, response) {
-                jQuery.ajax({
-                    type: "GET",
-                    url: "static/makeData.csv",
-                    dataType: "text",
-                    success: function(data) {
-                        var makeData = jQuery.csv.toArray(data); 
-                        var matcher = new RegExp( "\\b" + jQuery.ui.autocomplete.escapeRegex( request.term ), "i" );
-                        response( jQuery.grep( makeData, function( item ){
-                            return matcher.test( item );
-                        }));
-                    }
-                });
-            },
-        });
-
-        jQuery('#inputModel').autocomplete({
-          source:  function(request, response) {
-                jQuery.ajax({
-                    type: "GET",
-                    url: "static/modelData.csv",
-                    dataType: "text",
-                    success: function(data) {
-                        var modelData = jQuery.csv.toArray(data); 
-                        var matcher = new RegExp( "\\b" + jQuery.ui.autocomplete.escapeRegex( request.term ), "i" );
-                        response( jQuery.grep( modelData, function( item ){
-                            return matcher.test( item );
-                        }));
-                    }
-                });
-            },
-        });
-    });
-
-    //jQuery('#inputMake').autocomplete( "option", "delay", 0 );
-    //jQuery('#inputModel').autocomplete( "option", "delay", 0 );
-    </script>    
-
-    <!--year-->
-    <label for="inputEmail" class="sr-only">Car Year</label>
-	<input type="number" name="year" id="inputYear" class="form-control" placeholder="Car Year (1909~2015)" min="1909" max="2015" required="" autofocus="">    
-    <br/>
-    
-    <!--email-->
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-    <br/>
-    <input type="submit" class="btn btn-lg btn-primary btn-block">
-</form>
+<p>Hello World</p>
 </body>
 </html>
