--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -59,13 +59,22 @@
     </script>    
 
     <!--year-->
-    <label for="inputEmail" class="sr-only">Car Year</label>
-	<input type="number" name="year" id="inputYear" class="form-control" placeholder="Car Year (1909~2015)" min="1909" max="2015" required="" autofocus="">    
+    <label for="inputstartYear" class="sr-only">Start Year</label>
+    <input type="number" name="minYear" id="inputstartYear" class="form-control" placeholder="Start Year (1909~2015)" min="1909" max="2015" required="" autofocus="">    
     <br/>
-    
+    <label for="inputendYear" class="sr-only">End Year</label>
+    <input type="number" name="maxYear" id="inputendYear" class="form-control" placeholder="End Year (1909~2015)" min="1909" max="2015" required="" autofocus=""> 
+    <br/>
+    <!--price-->
+    <label for="inputMinPrice" class="sr-only">Min Price</label>
+    <input type="number" name="minPrice" id="inputMinPrice" class="form-control" placeholder="Min Price (500~1000000)" min="500" max="1000000" required="" autofocus="">    
+    <br/>
+    <label for="inputMaxPrice" class="sr-only">Max Price</label>
+    <input type="number" name="maxPrice" id="inputMaxPrice" class="form-control" placeholder="Max Price (500~1000000)" min="500" max="1000000" required="" autofocus="">
+    <br/>
     <!--email-->
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
     <br/>
-    <input type="submit" class="btn btn-lg btn-primary btn-block">
+    <input type="submit" value="Submit" class="btn btn-lg btn-primary btn-block">
 </form>
