modify web page

--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -3,7 +3,7 @@
     <h6></h6>
     <!--username-->
     <label for="inputUserName" class="sr-only">User Name</label>
-   	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
+   	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="" value="Bob">
     <h6></h6>
 
     <!--make-->
@@ -60,21 +60,21 @@
 
     <!--year-->
     <label for="inputstartYear" class="sr-only">Start Year</label>
-    <input type="number" name="minYear" id="inputstartYear" class="form-control" placeholder="Start Year (1909~2015)" min="1909" max="2015" required="" autofocus="">    
+    <input type="number" name="minYear" id="inputstartYear" class="form-control" placeholder="Start Year (1909~2015)" min="1909" max="2015" required="" autofocus="" value="2008">    
     <h6></h6>
     <label for="inputendYear" class="sr-only">End Year</label>
-    <input type="number" name="maxYear" id="inputendYear" class="form-control" placeholder="End Year (1909~2015)" min="1909" max="2015" required="" autofocus=""> 
+    <input type="number" name="maxYear" id="inputendYear" class="form-control" placeholder="End Year (1909~2015)" min="1909" max="2015" required="" autofocus="" value="2015"> 
     <h6></h6>
     <!--price-->
     <label for="inputMinPrice" class="sr-only">Min Price</label>
-    <input type="number" name="minPrice" id="inputMinPrice" class="form-control" placeholder="Min Price (500~1000000)" min="500" max="1000000" required="" autofocus="">    
+    <input type="number" name="minPrice" id="inputMinPrice" class="form-control" placeholder="Min Price (500~1000000)" min="500" max="1000000" required="" autofocus="" value="5000">    
     <h6></h6>
     <label for="inputMaxPrice" class="sr-only">Max Price</label>
-    <input type="number" name="maxPrice" id="inputMaxPrice" class="form-control" placeholder="Max Price (500~1000000)" min="500" max="1000000" required="" autofocus="">
+    <input type="number" name="maxPrice" id="inputMaxPrice" class="form-control" placeholder="Max Price (500~1000000)" min="500" max="1000000" required="" autofocus="" value="14000">
     <h6></h6>
     <!--email-->
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" value="ldong6@ncsu.edu">
     <h6></h6>
     <input type="submit" value="Submit" class="btn btn-lg btn-primary btn-block">
 </form>
