--- a/templates/subscribe_form.html
+++ b/templates/subscribe_form.html
@@ -3,7 +3,7 @@
     <h6></h6>
     <!--username-->
     <label for="inputUserName" class="sr-only">User Name</label>
-   	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="" value="Bob">
+   	<input type="text" name="username" id="inputUserName" class="form-control" placeholder="User Name" required="" autofocus="">
     <h6></h6>
 
     <!--make-->
@@ -74,7 +74,7 @@
     <h6></h6>
     <!--email-->
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" value="ldong6@ncsu.edu">
+    <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
     <h6></h6>
     <input type="submit" value="Submit" class="btn btn-lg btn-primary btn-block">
 </form>
